fix project grid gaps

--- a/src/components/projectCard.module.css
+++ b/src/components/projectCard.module.css
@@ -2,7 +2,8 @@
 
 .projectsContainer {
   display: flex;
-  gap: 1.5%;
+  margin-top: 50px;
+  gap: 20px;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: stretch;
